2007-08-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_new): Fix is-active
	property connection, it was completely wrong

2007-08-17  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_internal), (totem_embedded_play),
	(totem_embedded_open_uri), (totem_embedded_open_stream),
	(totem_embedded_open_playlist_item),
	(totem_embedded_set_local_file), (on_got_redirect), (on_eos_event):
	The heuristics for totem_embedded_open_internal actually starting
	play suck, so we pass that info on from the caller, but we should
	do better than that (open should play...)
	Fixes files now cached locally starting to play straight away

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_uri),
	(totem_embedded_set_local_cache), (on_got_redirect): re-add the
	stream_uri, that's what it's there for. When setting a local file
	cache, remember the original URI, so we can resolve redirects
	against that, rather than the local file (Closes: #345328)

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Only go "audioonly" if the
	controller is shown, even if we're smaller than the minimum
	size (Closes: #424784)

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_playlist_item),
	(totem_embedded_parse_duration), (entry_parsed):
	parse the starttime as passed on by the playlists, and seek
	to that time straight after having opened the playlist item
	if need be (Closes: #401049)

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: Support application/asx
	for the benefit of [http://www.yle.fi/eurovision/main.php?id=2034]
	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry):
	Push starttime from ASX files to the applications

2007-08-16  Bastien Nocera  <hadess@hadess.net>
